02-Resources/Phase3/04.2-Minio.ingress.yaml
#=============================================================================
# Copyright Luiz Carlos Faria 2022. All Rights Reserved.
# This file is licensed under the MIT License.
# License text available at https://opensource.org/licenses/MIT
#=============================================================================

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gago-minio-ingress
  namespace: minio-operator
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "minio-188-40-114-31.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
